--- a/name-graph.html
+++ b/name-graph.html
@@ -24,10 +24,25 @@
 		}
 		svg {
 			display: block;
-			height: 100vh;
+			height: 80vh;
 			width: 100%;
 			padding: 1rem;
 			box-sizing: border-box;
+		}
+
+		.share {
+			display: block;
+			box-sizing: border-box;
+			border: none;
+			padding: 0.5rem;
+			background: #74c0fc;
+			border-radius: 5px;
+			color: #fff;
+			font-weight: bold;
+			font-size: 1.25rem;
+			margin: 0 auto;
+			width: 50%;
+			margin-bottom: 1rem;
 		}
 	</style>
 </head>
@@ -128,11 +143,14 @@ word: Word to spell`);
 				$img.onload = function(){
 					window.URL.revokeObjectURL(this.src);
 
+					const padding = 40;
 					const $canvas = document.createElement("canvas");
-					$canvas.width = $canvas.height = options.radius*2;
+					$canvas.width = $canvas.height = options.radius*2 + padding;
 
 					const ctx = $canvas.getContext("2d");
-					ctx.drawImage(this, 0, 0);
+					ctx.fillStyle = "#333";
+					ctx.fillRect(0,0,options.radius*2+padding,options.radius*2+padding);
+					ctx.drawImage(this, padding/2, padding/2);
 
 					$canvas.toBlob(function(blob){
 						resolve(blob);
@@ -147,7 +165,7 @@ word: Word to spell`);
 
 				const file = await svg_to_img(share_svg);
 				const shareData = {
-					files: [file],
+					files: [ new File([file], "imagen.png", {type:"image/png"}) ],
 					url: document.location.href,
 				};
 
